Make sure event stream empty message container is aligned for longer search values

--- a/frontend/src/pages/Player/components/EventStream/EventStream.module.scss
+++ b/frontend/src/pages/Player/components/EventStream/EventStream.module.scss
@@ -72,4 +72,7 @@
     flex-direction: column;
     flex-grow: 1;
     justify-content: center;
+    overflow-wrap: anywhere;
+    padding: 0 var(--size-medium);
+    text-align: center;
 }
